@@ -5,6 +5,9 @@ HISTORY
 1.1rc5 (unreleased)
 -------------------
 
+- Set javascript files as cachable and mergable.
+  [robgietema]
+
 - Removed getInfoFromBrain method in JSONFolderListing and JSONSearch.
   [robgietema]
 
